fixed navbar sliding behind content
fixed by removing position form #vissitKort

--- a/styles/style.css
+++ b/styles/style.css
@@ -101,8 +101,6 @@ a{
     min-height: 1250px;
     margin-top: 0;
     margin-bottom: 0;
-    position: relative;
-
 }
 #visitKort h2{
     text-align: center;
